[package]
name = "cap-rust-sandbox"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.39"
arbitrary = { version = "1.0", features = ["derive"] }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git" }
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
async-recursion = "1.0.0"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git" }

# We need the legacy feature in order to avoid gas estimation issues. See https://github.com/gakonst/ethers-rs/issues/825
ethers = { features = ["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-contract = { features = ["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-core = { features = ["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hex = "0.4.3"

itertools = "0.10.1" # needed for jf-cap to compile
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
jf-plonk = { features = ["std", "test_apis"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-rescue = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.4"
rand_chacha = "0.3.1"
reef = { git = "https://github.com/EspressoSystems/reef.git" }
regex = "1.5.5"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.67"
sha3 = "0.9.1"
snafu = { version = "0.7", features = ["backtraces"] }
strum_macros = "0.20.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

# copied from jellyfish-apps
[dependencies.ark-poly-commit]
git = "https://github.com/arkworks-rs/poly-commit/"
rev = "cafc05e39692bbc5c383990063ad851f0b94a553"
default-features = false

[build-dependencies]
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
glob = "^0.3.0"
