[package]
name = "contracts-workflow"
version = "0.1.0"
edition = "2018"

[dependencies]
jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }

serde_json = "1.0.67"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8.4"
