[package]
name = "cape-workflow"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
cap-rust-sandbox = { path = "../../contracts/rust" }
jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-rescue = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }

serde_json = "1.0.67"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8.4"
itertools = "0.10.1"
