[package]
name = "cape-workflow"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
cap-rust-sandbox = { path = "../../contracts/rust" }

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
itertools = "0.10.1"
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
jf-rescue = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }

serde_json = "1.0.67"
