# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cape-workflow"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
cap-rust-sandbox = { path = "../../contracts/rust" }

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
itertools = "0.10.3"
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.4" }
jf-rescue = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }

serde_json = "1.0.67"
